--- a/layouts/partials/metadata/authors.html
+++ b/layouts/partials/metadata/authors.html
@@ -12,7 +12,7 @@
   {{- if not $first }}, {{- end -}}
   {{- $matched := first 1 (where $authorPages "Title" $name) -}}
   {{- $lname := lower $name -}}
-  {{- $isMe := and (strings.Contains $lname "alejandro") (strings.Contains $lname "garci")) -}}
+  {{- $isMe := and (strings.Contains $lname "alejandro") (strings.Contains $lname "garcia") -}}
   {{- if $matched -}}
     <a href="{{ $matched.RelPermalink }}">{{ if $isMe }}<strong>{{ $name }}</strong>{{ else }}{{ $name }}{{ end }}</a>
   {{- else -}}
